[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-embed = "6.4.0"
irc-proto = { version = "0.15.0" }
irc = { version = "0.15.0", features = ["ctcp", "toml"] }

tokio = { version = "1.0.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }


# socks 支持 
futures = "0.3.0"

sysinfo = "0.26.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
