[package]
name = "loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# 嵌入资源文件
rust-embed = "6.4.0"
# 加载dll
libloading = "0.7.3"
# 获取系统信息
sysinfo = "0.26.2"
# 日志
log = "0.4"

irc-proto = { version = "0.15.0" }
irc = { version = "0.15.0", features = ["ctcp", "toml"] }
tokio = { version = "1.0.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }

# socks 支持 
futures = "0.3.0"


[target.'cfg(target_os="linux")'.dependencies]
openssl = { version = "0.10.41", features = ["vendored"] }
nix = "0.25.0"
libc = "0.2"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "sysinfoapi",
    "minwinbase",
    "minwindef",
    "winnt",
] }
advapi32-sys = "0.2.0"
winsafe = { version = "0.0.11", features = [] }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Storage",
    "Win32_Storage_Packaging",
    "Win32_Storage_Packaging_Opc",
    "Win32_System_Com",
]
